# src/main/java/uk/gov/pay/products/resources/HealthCheckResource.java
@@ -4,6 +4,10 @@ import com.codahale.metrics.health.HealthCheck;
 import com.google.common.collect.ImmutableMap;
 import com.google.inject.Inject;
 import io.dropwizard.setup.Environment;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -31,6 +35,27 @@ public class HealthCheckResource {
     @GET
     @Path("healthcheck")
     @Produces(APPLICATION_JSON)
+    @Operation(
+            tags = "Other",
+            summary = "Healthcheck endpoint for products. Check database, deadlocks and ping",
+            responses = {
+                    @ApiResponse(responseCode = "200", content = @Content(schema = @Schema(example = "{" +
+                            "    \"database\": {" +
+                            "        \"healthy\": true," +
+                            "        \"message\": \"Healthy\"" +
+                            "    }," +
+                            "    \"ping\": {" +
+                            "        \"healthy\": true," +
+                            "        \"message\": \"Healthy\"" +
+                            "    }," +
+                            "    \"deadlocks\": {" +
+                            "        \"healthy\": true," +
+                            "        \"message\": \"Healthy\"" +
+                            "    }" +
+                            "}")), description = "OK"),
+                    @ApiResponse(responseCode = "503", description = "Service unavailable. If any healthchecks fail")
+            }
+    )
     public Response healthCheck() {
         SortedMap<String, HealthCheck.Result> results = environment.healthChecks().runHealthChecks();
 
